2007-05-19  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/ResolveFromXmlStep.cs
	  Mono.Linker/AssemblyMarker.cs
	  Mono.Linker/MarkStep.cs
	  Mono.Linker/ResolveFromAssemblyStep.cs:
		Process correctly the marker selected in the resolve phases.

2007-05-17  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/CleanStep.cs
	  Mono.Linker/SweepStep.cs
	  Mono.Linker/MarkStep.cs:
		Link only when necessary.

	* Tests/Mono.Linker.Tests/AbstractLinkingTestFixture.cs
	  Tests/Mono.Linker.Tests/AbstractTestFixture.cs
	  Mono.Linker.csproj
	  Mono.Linker/ResolveFromXmlStep.cs
	  Mono.Linker/AssemblyMarker.cs
	  Mono.Linker/Marker.cs
	  Mono.Linker/MarkStep.cs
	  Mono.Linker/TypePreserve.cs
	  Mono.Linker/Pipeline.cs:
		Deal with preserve and required infos, make last test pass.

	* Tests/Mono.Linker.Tests/XmlLinkingTestFixture.cs
	  Tests/Mono.Linker.Tests/AbstractLinkingTestFixture.cs
	  Tests/TestCases/Linker/PreserveFieldsRequired
	  Tests/TestCases/Linker/PreserveFieldsRequired/Library.cs
	  Tests/TestCases/Linker/PreserveFieldsRequired/desc.xml
	  Tests/TestCases/Linker/PreserveFieldsRequired/Makefile
	  Tests/TestCases/Linker/PreserveFieldsRequired/Library.dll:
		Add a new (failing for now) test case for preserve and required.

2007-05-16  Jb Evain  <jb@nurv.fr>

	* Tests/Mono.Linker.Tests/AbstractTestFixture.cs
	  Mono.Linker.csproj
	  Mono.Linker/CoreAction.cs
	  Mono.Linker/Driver.cs
	  Mono.Linker/LinkContext.cs:
		Simplify the command line options.

	* Tests/Mono.Linker.Tests/AbstractTestFixture.cs
	  Mono.Linker.csproj
	  Mono.Linker/CleanStep.cs
	  Mono.Linker/ResolveFromXmlStep.cs
	  Mono.Linker/Driver.cs
	  Mono.Linker/OutputStep.cs
	  Mono.Linker/ResolveFromAssemblyStep.cs
	  Mono.Linker/LinkContext.cs
	  Mono.Linker/BlacklistStep.cs
	  Mono.Linker/Pipeline.cs:
		Working on black list support.

	* Descriptors/corlib.xml
	  Descriptors/system.xml
	  Descriptors/system.web.xml:
		First audit of the core.

2007-04-23  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/CleanStep.cs: